# hs-usdt

./: CHANGELOG.md  README.mkd  configure.ac  hs-usdt.buildinfo.in  hs-usdt.cabal
app/: Main.hs
src/System/: USDT.hs
