cabal-version:      2.4
name:               hs-usdt
version:            0.1.0.0
synopsis:           A small binding for introduction of USDT tracepoints in Haskell programs.

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

license:            BSD-3-Clause
author:             Ben Gamari
maintainer:         ben@smart-cactus.org
copyright:          (c) 2022 Ben Gamari
category:           System
extra-source-files: CHANGELOG.md
build-type:         Configure

library
    exposed-modules:  System.USDT
    build-depends:    base >=4.14 && <4.17,
                      process,
                      template-haskell
    hs-source-dirs:   src
    default-language: Haskell2010

executable hs-usdt
    main-is:          Main.hs
    build-depends:    base,
                      hs-usdt
    hs-source-dirs:   app
    default-language: Haskell2010
